vendor: Add fsnotify and remove glog
fsnotify is needed by the new ocicni monitoring implementation.
As ocicni switched to logrus, glog is no longer needed.

Signed-off-by: Samuel Ortiz <sameo@linux.intel.com>

--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,9 @@
         "github.com/docker/distribution": {
             "branch": "master"
         },
+        "github.com/fsnotify/fsnotify": {
+            "branch": "master"
+        },
         "github.com/godbus/dbus": {
             "version": "^4.0.0"
         },
