--- a/manifest.json
+++ b/manifest.json
@@ -12,6 +12,9 @@
         "github.com/docker/distribution": {
             "branch": "master"
         },
+        "github.com/fsnotify/fsnotify": {
+            "branch": "master"
+        },
         "github.com/godbus/dbus": {
             "version": "^4.0.0"
         },
